syntax = "proto3";

package SyncProto;

message QuildRequest {
	int32 guildId = 1;
}